k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music-app
  labels:
    app: music-app
    version: v1.0.0
