k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-app-service
  namespace: music-app
  labels:
    app: music-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: music-app

---
apiVersion: v1
kind: Service
metadata:
  name: music-app-nodeport
  namespace: music-app
  labels:
    app: music-app
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: music-app
